Muutettu globaaleja tyylejä, main-layout.css sekä master-detailuser-view.css. Muutettu tyyliä myös yksittäiselle komponentille MasterDetailuserView.java tiedostossa, vaihdettu taustaväriä. Muuutettu PublicView.java tiedostossa taustaväriä

--- a/src/main/frontend/themes/my-app/main-layout.css
+++ b/src/main/frontend/themes/my-app/main-layout.css
@@ -4,7 +4,10 @@ vaadin-scroller[slot="drawer"] {
 
 vaadin-side-nav-item vaadin-icon {
   padding: 0;
+  background-color: cornflowerblue;
 }
+
+
 
 [slot="drawer"]:is(header, footer) {
   display: flex;
